--- a/.github/workflow/test2.yaml
+++ b/.github/workflow/test2.yaml
@@ -14,4 +14,4 @@ jobs:
       - name: Run Tests
         run: |
           echo "Running tests triggered by account-service"
-          # run your test commands here
+          # run your test commands heree
